--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,7 @@
 theme: jekyll-theme-architect
-title: "Christophe Villeger"
-description: "I'm a Web Engineer"
-show_downloads: "false"
+title: Hello
+email: villeger.c@gmail.com
+description: "I'm Christophe Villeger, Back-End Engineer.
+show_downloads: false
+twitter_username: VillegerC
+github_username: cvilleger
