--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-architect
 title: Hello
 email: villeger.c@gmail.com
-description: "I'm Christophe Villeger, Back-End Engineer.
+description: "I'm Christophe Villeger, Back-End Engineer."
 show_downloads: false
 twitter_username: VillegerC
 github_username: cvilleger
