--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-architect
-title: Hello
+title: Christophe Villeger
 email: villeger.c@gmail.com
-description: "I'm Christophe Villeger, Back-End Engineer."
+description: "My experience as a Back-End Engineer. I'm Christophe Villeger."
 show_downloads: false
 twitter_username: VillegerC
 github_username: cvilleger
